# fastapi-vs-axum

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
Dockerfiles/: axum-build  axum-server  fastapi-server
axum-server/: main.rs
benchmark/: bench.ipynb  charts.ipynb
fastapi-server/: main.py
results/: axum_docker_linux.csv  axum_native.csv  fastapi.csv  fastapi_native.csv
src/: main.rs
