[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "Python vs Rust microservice/server benchmarks"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.1"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
